# mage-os-database-changelog

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
src/: main.rs
src/lib/: change.rs  database.rs  error.rs  mod.rs  test_util.rs
src/lib/aggregate/: chain_aggregate.rs  change_aggregate.rs  mod.rs  product.rs  wrapped_aggregate.rs
src/lib/app/: app.rs  cli_opts.rs  config.rs  mod.rs  output.rs
src/lib/entity/: mod.rs
src/lib/entity/product/: entity.rs  entity_attribute.rs  mod.rs
src/lib/event/: mod.rs  update_event.rs
src/lib/event/observer/: chain_observer.rs  entity.rs  filter_observer.rs  macros.rs  mod.rs  product_entity.rs
src/lib/log/: catalog_inventory_change.rs  catalog_rule_change.rs  catalog_rule_product_change.rs  change_log.rs  date.rs  field_update.rs  mod.rs  product_change.rs  sender.rs
src/lib/mapper/: catalog_rule.rs  chain.rs  magento_two.rs  mod.rs  observer.rs  product.rs  product_attribute.rs  product_bundle.rs  product_category.rs  product_configurable.rs  product_link.rs  product_media_gallery_value.rs  product_tier_price.rs  product_website.rs
src/lib/output/: json.rs  mod.rs  msgpack.rs
src/lib/replication/: binary_table.rs  client.rs  error.rs  mod.rs  reader.rs  row.rs  rows.rs  test_fixture.rs
src/lib/replication/event/: meta.rs  mod.rs  update_event.rs
src/lib/replication/observer/: chain_observer.rs  filter_observer.rs  macros.rs  mod.rs
src/lib/schema/: info.rs  info_table.rs  mod.rs  table_name.rs
src/lib/test_util/: log_sender.rs  macros.rs  match_binary_row.rs  mod.rs  observer.rs  schema.rs
tests/: docker-compose.yml  event-export.rs  replication-client.rs  replication-reader.rs  schema-information.rs
tests/fixture/: mod.rs
tests/test_env/: binlog-partial-json.cnf  binlog-partial.cnf  binlog.cnf  mysql.env
