[package]
name = "mage_os_database_changelog"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.7"
mysql_async = { version = "0.31", features = ["tracing"] }
mysql_common = "0.29"
phf = { version = "0.11", features = ["macros"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time", "macros"] }
clap = { version = "4", features = ["derive"] }
tokio-stream = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time", "macros", "test-util"]}

[package.metadata.docs.rs]
all-features = true

[lib]
name = "mage_os_database_changelog"
path = "src/lib/mod.rs"

[[bin]]
name = "database-changelog"
path = "src/main.rs"
