[package]
name = "mage-os-database-changelog"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.7"
mysql_async = { version = "0.31", features = ["tracing"] }
mysql_common = "0.29"
phf = { version = "0.11", features = ["macros"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time", "macros"] }
clap = { version = "4", features = ["derive"] }
tokio-stream = "0.1"
thiserror = "1"
smallvec = "1.10.0"
bitvec = "1.0.1"
serde = "1.0.152"
serde_json = "1.0.92"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time", "macros", "test-util"]}

[lib]
name = "mage_os_database_changelog"
path = "src/lib/mod.rs"

[features]
default = ["test_util"]
test_util = []

[[bin]]
name = "database-changelog"
path = "src/main.rs"
